--- a/common/pom.xml
+++ b/common/pom.xml
@@ -2,7 +2,7 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>edu.umn.pubsub.common</groupId>
+  <groupId>edu.umn.bulletinboard.common</groupId>
   <artifactId>common</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
